--- a/alltax-dash/src/app/app.component.html
+++ b/alltax-dash/src/app/app.component.html
@@ -1,7 +1,7 @@
-<app-header></app-header>
+<app-header [title]="pageTitle"></app-header>
 
 <main>
-  <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 </main>
 
 <app-footer></app-footer>
