--- a/alltax-dash/src/app/layout/footer/footer.component.html
+++ b/alltax-dash/src/app/layout/footer/footer.component.html
@@ -1,1 +1,2 @@
-<p>footer works!</p>
+<p>ALLTAX ‒ All Rights Reserved 2025 ©</p>
+<img src="https://alltaxplatform.com/assets/footer-logo.png" alt="footer">
