--- a/alltax-dash/src/app/features/dashboard/components/filter-dropdowns/filter-dropdowns.component.html
+++ b/alltax-dash/src/app/features/dashboard/components/filter-dropdowns/filter-dropdowns.component.html
@@ -1,1 +1,27 @@
-<p>filter-dropdowns works!</p>
+
+<mat-form-field class="form" appearance="outline">
+    <mat-label>Categoria</mat-label>
+    <mat-select [(ngModel)]="selectedCategory" (selectionChange)="onCategoryChange()">
+        <mat-option *ngFor="let category of categories" [value]="category">
+        {{ category.categoryName }}
+        </mat-option>
+    </mat-select>
+</mat-form-field>
+
+<mat-form-field class="form" appearance="outline">
+    <mat-label>Produto</mat-label>
+    <mat-select [(ngModel)]="selectedProduct" (selectionChange)="onProductChange()">
+        <mat-option *ngFor="let product of products" [value]="product">
+        {{ product.productName }}
+        </mat-option>
+    </mat-select>
+</mat-form-field>
+
+<mat-form-field class="form" appearance="outline">
+    <mat-label>Marca</mat-label>
+    <mat-select [(ngModel)]="selectedBrand" (selectionChange)="onBrandChange()">
+        <mat-option *ngFor="let brand of brands" [value]="brand">
+        {{ brand.brandName }}
+        </mat-option>
+    </mat-select>
+</mat-form-field>
