--- a/alltax-dash/src/app/features/dashboard/components/sales-chart/sales-chart.component.html
+++ b/alltax-dash/src/app/features/dashboard/components/sales-chart/sales-chart.component.html
@@ -1,1 +1,19 @@
-<p>{{ currentBrand?.brandName || '' }}</p>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>Vendas mensais para: {{ currentBrand?.brandName}}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <div class="chart-container">
+        <canvas baseChart
+            [datasets]="lineChartData.datasets"
+            [labels]="lineChartData.labels"
+            [options]="lineChartOptions"
+            [type]="lineChartType"> </canvas>
+        </div>
+    </mat-card-content>
+    <mat-card-actions class="chart-actions">
+        <button mat-raised-button color="accent" (click)="toggleChartType()">
+            Alterar para Gráfico de {{ lineChartType === 'bar' ? 'Linha' : 'Barras' }}
+        </button>
+    </mat-card-actions>
+</mat-card>
